--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "",
+  "author": "Nithya H",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.5.0",
